<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kalonkotlin.ui.student.StudentFragment"
        android:id="@+id/next_button">

    <Button
            android:text="@string/next"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:id="@+id/next_day_button"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:layout_marginStart="208dp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="48dp" />

    <Button
            android:text="@string/onWeek"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:id="@+id/on_week_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scheduleText_prof"
            android:visibility="invisible"
            android:layout_marginStart="312dp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="48dp" />

    <Button
            android:text="@string/now"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:id="@+id/now_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scheduleText_prof"
            android:visibility="invisible"
            android:layout_marginStart="104dp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="48dp" />

    <Button
            android:text="@string/back"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:id="@+id/back_prof"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scheduleText_prof"
            android:visibility="invisible"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="48dp" />

    <TextView
            android:id="@+id/text_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173" />

    <TextView
            android:id="@+id/courseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="8dp"
            android:text="@string/course_name"
            app:layout_constraintBottom_toTopOf="@+id/courseNumber"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black" />

    <TextView
            android:id="@+id/facultyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/fac_name"
            app:layout_constraintBottom_toTopOf="@+id/facultyNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.746"
            app:layout_constraintStart_toEndOf="@+id/courseText"
            android:textColor="@color/black" />

    <TextView
            android:id="@+id/groupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_student"
            app:layout_constraintVertical_bias="0.772"
            android:textColor="@color/black" />

    <TextView
            android:layout_width="411dp"
            android:layout_height="621dp"
            android:id="@+id/scheduleText_prof"
            android:visibility="invisible"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/next_day_button"
            android:textColor="@color/black" />

    <Spinner
            android:id="@+id/courseNumber"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:entries="@array/course_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_student"
            tools:ignore="DuplicateSpeakableTextCheck"
            app:layout_constraintEnd_toStartOf="@+id/facultyNumber"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <Spinner
            android:id="@+id/facultyNumber"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:entries="@array/faculty_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_student"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp" />

    <Spinner
            android:id="@+id/group"
            android:layout_width="350dp"
            android:layout_height="22dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/courseNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_student"
            app:layout_constraintVertical_bias="0.498" />

    <Button
            android:id="@+id/chooseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/choose_name"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_student"
            app:layout_constraintVertical_bias="0.67"
            app:cornerRadius="60dp" />

    <Button
            android:id="@+id/stud_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/stud_search_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_student"
            app:layout_constraintVertical_bias="0.67"
            tools:ignore="DuplicateClickableBoundsCheck"
            app:cornerRadius="60dp" />


</androidx.constraintlayout.widget.ConstraintLayout>