<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kalonkotlin.ui.professor.ProfessorFragment">

    <TextView
            android:id="@+id/text_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.265"/>
    <TextView
            android:layout_width="389dp"
            android:layout_height="580dp"
            android:id="@+id/scheduleText_prof"
            android:visibility="invisible"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/now_prof"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:layout_width="288dp"
            android:layout_height="43dp"
            android:id="@+id/prof_name_status"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/scheduleText_prof"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backTextBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/scheduleText_prof"
            app:layout_constraintStart_toEndOf="@+id/prof_name_status"
            android:clickable="true"/>

    <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_professor"
            app:layout_constraintVertical_bias="0.545"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"/>

    <Button
            android:id="@+id/profSearchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stud_search_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintVertical_bias="0.349"/>
    <Spinner
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:id="@+id/chooseProfSpin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_professor"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.672" android:visibility="invisible"/>
    <Button
            android:text="@string/stud_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profChooseBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintVertical_bias="0.349"
            android:visibility="invisible"/>
    <Button
            android:text="@string/onWeek"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:id="@+id/onWeek_prof"
            app:layout_constraintStart_toEndOf="@+id/prof_next_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            android:clickable="true"
            android:layout_marginBottom="48dp"/>
    <Button
            android:text="@string/back"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:id="@+id/back_prof"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            android:clickable="false"
            android:layout_marginBottom="48dp"/>
    <Button
            android:text="@string/now"
            android:layout_width="104dp"
            android:layout_height="60dp"
            android:id="@+id/now_prof"
            app:layout_constraintStart_toEndOf="@+id/back_prof"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            android:clickable="false"
            android:layout_marginBottom="48dp"/>
    <Button
            android:id="@+id/prof_next_btn"
            android:text="@string/next"
            android:layout_width="104dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toEndOf="@+id/now_prof"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"
            android:clickable="false"
            android:layout_marginBottom="48dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>